assets/scss/_common.scss
/* ... */
.f-left {
  float: left;
}
.f-right {
  float: right;
}
.fix {
  overflow: hidden;
}
.clear {
  clear: both;
}

a,
.button {
  @include transition(0.3s);
}
a:focus,
.button:focus {
  text-decoration: none;
  outline: none;
}
a {
  color: rgb(99, 92, 92);
}
a:hover {
  color: #fff;
}
a:focus,
a:hover,
.portfolio-cat a:hover,
.footer -menu li a:hover {
  text-decoration: none;
}
a,
button {
  color: #fff;
  outline: medium none;
}
button:focus,
input:focus,
input:focus,
textarea,
textarea:focus {
  outline: 0;
}
.uppercase {
  text-transform: uppercase;
}

input:focus::-moz-placeholder {
  opacity: 0;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
}

.capitalize {
  text-transform: capitalize;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  color: inherit;
}

ul {
  margin: 0px;
  padding: 0px;
}
li {
  list-style: none;
}

hr {
  border-bottom: 1px solid #eceff8;
  border-top: 0 none;
  margin: 30px 0;
  padding: 0;
}

/* Theme-overlay */
.theme-overlay {
  position: relative;
}
.theme-overlay::before {
  background: #1696e7 none repeat scroll 0 0;
  content: "";
  height: 100%;
  left: 0;
  opacity: 0.6;
  position: absolute;
  top: 0;
  width: 100%;
}
.overlay2 {
  position: relative;
  z-index: 0;
}
.overlay2::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  @extend %overlay1;
}
.overlay2 {
  position: relative;
  z-index: 0;
}
.overlay2::before {
  position: absolute;
  content: "";
  background-color: #2e2200;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  opacity: 0.5;
}

// Section Padding
.section-padding {
  padding-top: 120px;
  padding-bottom: 120px;
}
.separator {
  border-top: 1px solid #f2f2f2;
}

.mb-90 {
  margin-bottom: 90px;
  @media #{$mobile_device} {
    margin-bottom: 30px;
  }
  @media #{$tablet_device} {
    margin-bottom: 45px;
  }
}

/* owl-carousel button style */
.owl-carousel {
  .owl-nav div {
    background: rgba(255, 255, 255, 0.8) none repeat scroll 0 0;
    height: 40px;
    left: 20px;
    line-height: 40px;

    font-size: 22px;
    color: #646464;
    opacity: 1;
    visibility: visible;
    position: absolute;
    text-align: center;
    top: 50%;
    transform: translateY(-50%);
    transition: all 0.3s ease 0s;
    width: 40px;
  }
  .owl-nav {
    div {
      &.owl-next {
        left: auto;
        right: -30px;
        i {
          position: relative;
          right: 0;
          top: 1px;
        }
      }
      &.owl-prev {
        i {
          position: relative;
          right: 1px;
          top: 0px;
        }
      }
    }
  }
  &:hover {
    .owl-nav {
      div {
        opacity: 1;
        visibility: visible;
        &:hover {
          color: #fff;
          background: $theme-color4;
        }
      }
    }
  }
}

.btn {
  background: $btn_bg;
  font-family: $font_1;
  text-transform: uppercase;
  padding: 30px 37px 30px 97px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-size: 15px;
  font-weight: 700;
  border-radius: 0px;
  line-height: 1;
  -moz-user-select: none;
  letter-spacing: 1px;
  line-height: 0;
  margin-bottom: 0;
  margin: 10px;
  cursor: pointer;
  transition: color 0.4s linear;
  position: relative;
  z-index: 1;
  border: 0;
  overflow: hidden;
  margin: 0;
  border-radius: 5px;

  @include responsive("tab-land") {
    margin-top: -20px;
    font-size: 15px;
    padding: 28px 27px 28px 77px;
    font-weight: bolder;
  }

  &--white {
    background-color: $white;
    color: $theme-color;
    font-weight: 700;
    &:after {
      position: absolute;
      content: "";
      width: 30px;
      background: $black !important;
      left: 37px;
      top: 50%;
      transform: translateY(-50%);
      height: 1px;
    }
    &:before {
      background: $theme-color2 !important;
    }
    &:hover {
      color: $white;
    }

    @include responsive("tab-land") {
      margin-top: 10px;
    }
  }
  &--inverse {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    &:before {
      background: $white !important;
    }
    &:hover {
      // background: $white !important;
      color: $theme-color2 !important;
      font-weight: 900;
    }
  }
  &::after {
    position: absolute;
    content: "";
    width: 30px;
    background: $white;
    left: 37px;
    top: 50%;
    transform: translateY(-50%);
    height: 1px;
  }
  &::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 101%;
    height: 101%;
    background: $theme-color;
    z-index: 1;
    border-radius: 5px;
    transition: transform 0.5s;
    transition-timing-function: ease;
    transform-origin: 0 0;
    transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
    //
    transform: scaleX(0);
    border-radius: 0px;
  }
}
.btn:hover::before {
  transform: scaleX(1);
  color: #fff !important;
  z-index: -1;
}
.btn:hover {
  background-position: right;
}
.btn.focus,
.btn:focus {
  outline: 0;
  box-shadow: none;
}
.about-btn {
  padding: 19px 97px 19px 20px;
}

// Custom Btn
.header-btn {
  padding: 29px 33px;
}
.hero-btn {
  padding: 32px 41px;
}
.white-btn {
  padding: 30px 39px;
  background: #fff;
  color: #331391 !important;
}
.black-btn {
  padding: 14px 35px;
  background: #000;
  &::before {
    background: #331391;
  }
}

// Custom Btn
.submit-btn2 {
  background: #ec5b53;
  width: 100%;
  height: 60px;
  padding: 10px 20px;
  border: 0;
  color: #fff;
  text-transform: capitalize;
  cursor: pointer;
  font-size: 16px;
  border-radius: 0px;
}
/* ... */

